<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Location Messages</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_sos">SosActivity</string>
    <string name="smsText">Longitude: , Latitude: . Help me please! Google Maps: http://maps.google.com/maps?z=18&amp;q=lat,long</string>

    <string-array name="settings_time_human_value">
        <item>deactivate</item>
        <item>1 min</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="settings_time_phone_value">
        <item>0</item>
        <item>60</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
        <item>2700</item>
        <item>3600</item>
    </string-array>

    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="warning">WARNING: You must have GPS turned on!</string>
    <string name="start">Start</string>
    <string name="start1">The start button leads to the menu where you set:</string>
    <string name="time">Máx Time</string>
    <string name="time1">Total time that sends messages.</string>
    <string name="sms">SMS Time</string>
    <string name="sms1">Time between messages.</string>
    <string name="Contact">Contact</string>
    <string name="Contact1">To whom the message is sent.</string>
    <string name="Contact2">After defining these parameters, the application starts running.</string>
    <string name="sos">SOS</string>
    <string name="sos1">The sos button leads to a preview of the message and the number to which the message will be sent.</string>
    <string name="sos2">Change contact to whom the message is sent.</string>
    <string name="sos3">Send a message to the SOS preset number.</string>
    <string name="Settings">Settings</string>
    <string name="Settings1">You can predefine the parameters:</string>
    <string name="Settings2">Contact\nMessage text (optional)\nSMS Time</string>
    <string name="dev">Developed in</string>
    <string name="by">by</string>
    <string name="Version">Version</string>
    <string name="set">Set máx time: </string>
    <string name="set2">Set SMS Time:</string>
    <string name="phone">phone Number</string>
    <string name="Time4">Time:</string>
    <string name="position">Last Position:</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="End">End</string>
    <string name="nconnected">(Not) Connected</string>
    <string name="ver">1.0</string>
    <string name="luis">Luís Afonso</string>
    <string name="filipe">Filipe Ferreira</string>
    <string name="ze">Jose Barreiro</string>
    <string name="iscte">ISCTE-IUL</string>
   

</resources>